<resources>

    <string name="feedbackForm">Feedback Form</string>
    <string name="fcusName">Customer Name :</string>
    <string name="nameFeedType">Enter your name</string>
    <string name="feedemail">Customer email :</string>
    <string name="feedemailenter">Enter your email</string>
    <string name="feedbackdescrip">Feedback Description :</string>
    <string name="enterfeeddescrip">Type your description</string>
    <string name="Feedsubmitbutton">Submit  Feedback</string>
    <string name="updateFeedback">Edit Feedback</string>
    <string name="et_editdescrip">Description</string>
    <string name="editfeedbackform">Edit Feedback Details</string>
    <string name="et_cusnamefeedback">Enter Your Name</string>
    <string name="searchcusnamefeedback">Search Feedback</string>
    <string name="et_emailfeedback">Enter your email</string>
    <string name="btn_editfeedback">Edit Feedback</string>
    <string name="btn_deleteFeedback">Delete Feedback</string>
    <string name="feedlist">Feedback List</string>
    <string name="view_feedback">View</string>
    <string name="calfeedback">Calculate</string>
    <string name="btn_clearfeed">Clear</string>
    <string name="firstweekfeedtot">First week feedback total</string>
    <string name="secweekfeedtot">Second week feedback total</string>
    <string name="thirdweekfeedtot">Third week feedback total</string>
    <string name="fourthweekfeedtot">Fourth week feedback total</string>
    <string name="totfeedback">Total feedbacks per month</string>
    <string name="et_firstweekfeed">1st week</string>
    <string name="et_secweekfeedtot">second week</string>
    <string name="et_thirdweekfeedtot">Third week</string>
    <string name="et_fourthweekfeedtot">Fourth week</string>
    <string name="et_totfeedback">Total feedbacks</string>
    <string name="feedcal">Feedback Calculator</string>
    <string name="productReview">Product Review</string>
    <string name="picperfume">BVLGARI Perfume</string>
    <string name="rateus">Rate Us</string>
    <string name="et_writeReview">Write Review..</string>
    <string name="btn_submitReview">Submit Review</string>
    <string name="showRating">Show Rating</string>
    <string name="rateCount">Rate</string>
    <string name="manageFeedback">Feedback Management</string>
    <string name="btn_adminview">View Feedbacks</string>
    <string name="btn_adminCal">Feedback Calculator</string>


    <string name="btnOrdCalMain">Order Calculation</string>
    <string name="btn_product">Product</string>
    <string name="orderHome">Order Home</string>


    <string name="btn_orderHome">ORDER MANAGEMENT</string>
    <string name="btn_payment">PAYMENT MANAGEMENT</string>

    <string name="btn_feedback">FEEDBACK MANAGEMENT</string>
    <string name="tv_topicOF">Place Your Order</string>
    <string name="tv_cusNameOF">Name</string>
    <string name="tv_contactOF">Contact Number</string>
    <string name="tv_addressOF">Address</string>
    <string name="tv_postalOF">Postal Code</string>
    <string name="tv_wrapOF">Do you want to wrap the gift ?</string>
    <string name="tv_wrappOF">Wrapp the gift ?</string>
    <string name="tv_payOF">Payment Type</string>
    <string name="rd_payYesOF">Yes</string>
    <string name="rd_payNoOF">No</string>
    <string name="rd_cashOF">Cash</string>
    <string name="rd_cardOF">Card</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_editOF">Edit</string>
    <string name="tv_topicRdit">Update Order Details</string>
    <string name="tv_searchEdit">Enter you name</string>
    <string name="et_searchNameEdit">name</string>
    <string name="btn_search_edit">Search</string>
    <string name="tv_contactEdit">Contact Number</string>
    <string name="tv_addressEdit">Address</string>
    <string name="tv_postalEdit">Postal code</string>
    <string name="tv_wrapEdit">Wrap gift ?</string>
    <string name="tv_payEdit">Payment Type</string>
    <string name="rd_yesEdit">Yes</string>
    <string name="rd_noEdit">No</string>
    <string name="rd_cashEdit">Cash</string>
    <string name="rd_cardEdit">Card</string>
    <string name="btn_editEdit">Edit</string>
    <string name="btn_deleteEdit">Delete</string>
    <string name="tv_dateOF">Date</string>
    <string name="tv_dateEdit">Date</string>
    <string name="tv_orderListTopicCust">Orders</string>
    <string name="btn_viewOF">View</string>
    <string name="btn_userProfile">Create User Profile</string>
    <string name="tv_topicCP">Create Your Profile</string>
    <string name="et_usernameCP">Name</string>
    <string name="et_userageCP">Age</string>
    <string name="et_userphoneCP">"contact "</string>
    <string name="et_userPhoneCP">contact</string>
    <string name="et_userEmailCP">email</string>
    <string name="et_userNicCP">NIC</string>
    <string name="et_userAddressCP">address</string>
    <string name="btn_userPicCP">Choose Picture</string>
    <string name="btn_userSaveCP">Save</string>
    <string name="btn_userViewCP">View</string>
    <string name="tv_nameUL">Name</string>
    <string name="tv_ageUL">Age</string>
    <string name="tv_contactUL">Contact No</string>
    <string name="tv_emailUL">Email</string>
    <string name="tv_nicUL">NIC</string>
    <string name="tv_addressUL">Address</string>
    <string name="btn_updateUP">Update</string>
    <string name="tv_nmUS">Name</string>
    <string name="tv_agUS">Age</string>
    <string name="tv_phoneUS">Contact No.</string>
    <string name="tv_emailUS">Email</string>
    <string name="tv_nicUS">NIC</string>
    <string name="tv_addressUS">Address</string>
    <string name="txt_nameUP">Name</string>
    <string name="txt_ageUP">Age</string>
    <string name="txt_phoneUP">Contact</string>
    <string name="txt_emailUP">Email</string>
    <string name="txt_nicUP">NIC</string>
    <string name="txt_addressUP">Address</string>
    <string name="tv_WrapOLL">Wrap ?</string>
    <string name="tv_orderListTopicCus">My Order</string>
    <string name="btnPaymentOL">Continue With Payment</string>
    <string name="tv_topicOC">Calculate Order Price</string>
    <string name="tv_orderIDOC">Order ID</string>
    <string name="tv_nameOC">Customer</string>
    <string name="tv_amountOC">Total Price of Items</string>
    <string name="tv_delivaryOC">Delivary Charges</string>
    <string name="tv_TotOC">Total Order Price</string>
    <string name="btn_calculateOC">Calculate</string>
    <string name="tv_idOC">Order ID</string>
    <string name="et_id_OC" />
    <string name="btn_clearOC">Clear</string>

    <string name="tv_AmountOC">Total Price of items (Rs.)</string>
    <string name="tv_DelivaryOC">Delivary Charges (Rs.)</string>
    <string name="tv_TotOrderOC">Total Order Price (Rs.)</string>
    <string name="btn_OrderEmail_HOME">Order Email</string>
    <string name="btn_orderAdmin">Go..</string>
    <string name="btn_adminOrder">Order Admin</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="productname">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total Price</string>
    <string name="displayp">Payment Display</string>
    <string name="app_name">TeamDragons</string>
    <string name="payinsert">Payment Insert</string>
    <string name="cardnumber">Card Number</string>
    <string name="cashholder">Cash Holder Name</string>
    <string name="expired">Expire Date</string>
    <string name="cvc">CVC</string>
    <string name="proceed">PROCEED</string>
    <string name="payment_update">Update Payment</string>
    <string name="updatepayment">UPDATE</string>
    <string name="deletepayment">DELETE</string>
    <string name="retrivepay">Payment Details</string>
    <string name="updatepay">UPDATE</string>
    <string name="searchpay">Enter Customer Name</string>
    <string name="search">SEARCH</string>
    <string name="paynow">PAY NOW</string>
    <string name="updatepaymentdetails">UPDATE PAYMENT DETAILS</string>
    <string name="displaypay">PAYMENT DETAILS</string>
    <string name="serchpayment">Enter Cashholder Name</string>
    <string name="seepayments">View Payment Details</string>
    <string name="viewpay">View</string>
    <string name="viewpaydetails">View Payment Details</string>
    <string name="refunded">refunded</string>
    <string name="productPrice">Model Code</string>
    <string name="productprice">Product Price</string>
    <string name="qty">Quantity</string>
    <string name="totalProductCost">Total Product Cost</string>
    <string name="sellproductprice">Price Of Selling</string>
    <string name="Quantityofdayselling">Quantity Of Day Selling</string>
    <string name="sum">Sum of the Product</string>
    <string name="discountofsell">Discount Sell</string>
    <string name="totalsell">Total Selling one day</string>
    <string name="paymentca">Payment Calculator</string>
    <string name="clear">Clear</string>
    <string name="calculatepay">Calculate</string>


</resources>