<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_userPicUL"
        android:layout_width="268dp"
        android:layout_height="203dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_userPicUL">

        <TextView
            android:id="@+id/tv_nmUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nmUS"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_nameUL"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_nameUL"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_phoneUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_phoneUS"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_contactUL"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/tv_ageUL"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_contactUL"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_agUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_agUS"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_ageUL"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_below="@+id/tv_nameUL"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_ageUL"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_nicUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nicUS"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_nicUL"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/tv_emailUL"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/tv_nicUL"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_emailUS"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_emailUS"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_emailUL"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_below="@+id/tv_contactUL"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_emailUL"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_addressUS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_addressUS"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_addressUL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:text="@string/tv_addressUL"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
