<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".createUserProfile">


  <Button
      android:id="@+id/btn_userViewCP"
      android:layout_width="270dp"
      android:layout_height="47dp"
      android:layout_gravity="center"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="36dp"
      android:background="@drawable/rounded_button"
      android:text="@string/btn_userViewCP"
      android:textColor="#FFFF"
      app:backgroundTint="#0D2ADE"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn_userSaveCP"
      android:layout_width="255dp"
      android:layout_height="43dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:background="@drawable/rounded_button"
      android:text="@string/btn_userSaveCP"
      android:textColor="#fff"
      app:backgroundTint="#0D2ADE"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.824" />

  <EditText
      android:id="@+id/et_userPhoneCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="344dp"
      android:ems="10"
      android:hint="@string/et_userPhoneCP"
      android:inputType="phone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/et_userEmailCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="300dp"
      android:ems="10"
      android:hint="@string/et_userEmailCP"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/et_usernameCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="432dp"
      android:ems="10"
      android:hint="@string/et_usernameCP"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/et_userageCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="388dp"
      android:ems="10"
      android:hint="@string/et_userageCP"
      android:inputType="number"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/imageViewUserCP"
      android:layout_width="103dp"
      android:layout_height="95dp"
      android:background="#0D2ADE"
      app:layout_constraintBottom_toTopOf="@+id/et_usernameCP"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_topicCP"
      app:layout_constraintVertical_bias="0.933"      />

  <!--      android:src="@drawable/addphoto"  -->


  <TextView
      android:id="@+id/tv_topicCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:text="@string/tv_topicCP"
      android:textColor="#FFFFFF"
      android:textSize="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.052" />

  <EditText
      android:id="@+id/et_userNicCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:ems="10"
      android:hint="@string/et_userNicCP"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/et_userEmailCP" />

  <EditText
      android:id="@+id/et_userAddressCP"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/et_userAddressCP"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toTopOf="@+id/btn_userSaveCP"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_userEmailCP"
      app:layout_constraintVertical_bias="0.676" />

  <Button
      android:id="@+id/btn_userPicCP"
      android:layout_width="91dp"
      android:layout_height="40dp"
      android:layout_marginBottom="40dp"
      android:text="@string/btn_userPicCP"
      android:textSize="6sp"
      android:textStyle="normal"
      app:backgroundTint="#0D2ADE"
      app:layout_constraintBottom_toTopOf="@+id/et_usernameCP"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.298"
      app:layout_constraintStart_toEndOf="@+id/imageViewUserCP" />


</androidx.constraintlayout.widget.ConstraintLayout>