<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".OrderCalculation">

    <TextView
        android:id="@+id/tv_topicOC"
        android:layout_width="204dp"
        android:layout_height="41dp"
        android:text="@string/tv_topicOC"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="253dp"
        android:layout_height="516dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_topicOC"
        app:layout_constraintVertical_bias="0.187">

        <TextView
            android:id="@+id/tv_idOCal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/tv_idOC"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_id_OC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/et_id_OC"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_name_OC"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/tv_nameOC"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_name_OC"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_AmountOC"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="@string/tv_AmountOC"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_totPrice"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_DelivaryOC"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/tv_DelivaryOC"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_delivaryOC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_TotOrderOC"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/tv_TotOrderOC"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_totOrderOC"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_calculateOC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_calculateOC"
        app:backgroundTint="#0D2ADE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.598" />

    <Button
        android:id="@+id/btn_clearOC"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_clearOC"
        app:backgroundTint="#0D2ADE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btn_calculateOC"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.598" />

</androidx.constraintlayout.widget.ConstraintLayout>